added graphql and reorganised the components

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,20 @@
     <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <title>IssueLists</title>
+
+    <style>
+        table, th, td {
+            border-collapse:collapse;
+            padding: 10px;
+        }
+        tr:nth-child(even) {
+            background-color: #ddd;
+        }
+        th {
+            background-color: #333;
+            color: white;
+        }
+    </style>
 </head>
 
 <body>
