--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
 
     <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/whatwg-fetch@3.0.0/dist/fetch.umd.js"></script>
+
     <title>IssueLists</title>
 
     <style>
