issue list seperation

--- a/clientapp/public/index.html
+++ b/clientapp/public/index.html
@@ -25,6 +25,34 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <style>
+      table {
+        margin: 3em auto;
+      }
+      table, th, td {
+        border-collapse:collapse;
+        padding: 10px;
+      }
+      tr:nth-child(even) {
+        background-color: #ddd;
+      }
+      th {
+        background-color: #333;
+        color: white;
+      }
+      select, input {
+        margin-right: 10px;
+        padding: 10px;
+      }
+      button {
+        padding:10px; 
+        width:100px;
+        color:white;
+        background-color:#4CAF50;
+        border:none; 
+        border-radius:5px;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
